# showcase

./: Cargo.toml  LICENSE.txt  README.md  docker-compose.yml
.github/: FUNDING.yml
clickhouse/: .env  Dockerfile  README.md  docker-compose.yaml  package.json  tsconfig.json
cloudflare-pages-D1/: .gitignore  README.md  next.config.js  package.json  permissions.js  relations.js  tailwind.config.js  tsconfig.json  wrangler.toml
cloudflare-postgresql-neon/: .dev.vars.example  .dockerignore  .gitignore  README.md  docker-compose.yaml  next.config.js  package.json  tsconfig.json  wrangler.toml
demo/: Dockerfile_sqlite
deno-postgresql-neon/: .env  .env.example  README.md  next.config.js  package.json
flyio-postgresql/: .gitignore  Dockerfile  README.md  docker-compose.yaml  next.config.js  package.json  tailwind.config.js
flyio-sqlite-litefs/: .gitignore  Dockerfile  README.md  declarations.d.ts  fly.toml.example  northwindtraders-postgres.sql  package.json  permissions.js
frontend-common/: .gitignore  README.md  declarations.d.ts  sync.sh
netlify-postgresql-neon/: README.md  netlify.toml  next.config.js  package.json
nextjs-new/: .env  README.md  docker-compose.yml  next.config.mjs  package.json
node-myrest/: .dockerignore  .env  README.md  docker-compose.yaml  package.json
node-postgrest/: .env  README.md  docker-compose.yaml  package.json  tsconfig.json
pg-extension/: Dockerfile  README.md  docker-compose.yaml  introspection_query.sql  subzero_debian-bullseye_pg15-0.0.0_aarch64.deb  subzero_debian-bullseye_pg15-0.0.0_x86_64.deb  (+2 more)
src/: main.rs  (+1 more)
(+76 files in other folders)
