[package]
name = "subzero-rocket"
version = "0.1.0"
edition = "2018"
autobins = false
autobenches = false

[dependencies]
# authentication for git will need to be configured
# see https://docs.github.com/en/get-started/getting-started-with-git/caching-your-github-credentials-in-git
subzero = { version = "0.1.0", git = "https://github.com/subzerocloud/subzero-core" }
rocket = "0.5.0-rc.1"
http = "0.2"
lazy_static = "1.4.0"
snafu = "0.6.10"
figment = { version = "0.10.6", features = ["toml", "env"] }

[features]
default = []
postgresql = ["subzero/postgresql"]
sqlite = ["subzero/sqlite"]

[[bin]]
name = "subzero"
path = "src/main.rs"

[patch.crates-io]
tokio-postgres = { git = "https://github.com/subzerocloud/rust-postgres" }
postgres-types = { git = "https://github.com/subzerocloud/rust-postgres" }
postgres-openssl = { git = "https://github.com/subzerocloud/rust-postgres" }
postgres-protocol = { git = "https://github.com/subzerocloud/rust-postgres" }
